--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,6 @@
+* {
+  background-color: #BABD8D;
+}
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
