tweaked goals styling to even out all column heights

--- a/client/src/Pages/Goals/Goals.css
+++ b/client/src/Pages/Goals/Goals.css
@@ -1,18 +1,21 @@
   .column {
     float: left;
-    width: 33.33%;
+    display: table-cell;
     padding-left: 70px;
     padding-right: 70px;
+    /* width: 33.33%; */
   }
   
   .row:after {
     content: "";
     display: table;
     clear: both;
+    width: 100%;
   }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 800px) {
     .column {
       width: 100%;
+      display: block;
     }
   }
